[package]
name = "elc2-wasm"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
elc2 = { path = "../" }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
#wee_alloc = { version = "0.4.5", optional = true }
# xterm-js-rs = { version = "0.1.0", features = ["xterm-addon-fit"] }
#web-sys = { version = "0.3.39",features = ['Document','Element','HtmlElement',
#'HtmlDivElement','Node','Window','CssStyleDeclaration','EventTarget','MessageEvent']}
wasm-logger = "0.2.0"
log = "0.4.20"
